# election-tabulator

./: .gitattributes  .gitignore  README.md
Project1/: CMakeLists.txt  Makefile  README.md
Project1/documentation/: Doxyfile
Project1/src/: AuditLog.cpp  CMakeLists.txt  CPLElectionData.cpp  CPLParty.cpp  ElectionData.cpp  ElectionDataParser.cpp  OPLCandidate.cpp  OPLElectionData.cpp  OPLParty.cpp  Party.cpp  main.cpp
Project1/src/include/: AuditLog.hpp  CPLCandidate.hpp  CPLParty.hpp  Candidate.hpp  ElectionData.hpp  ElectionDataParser.hpp  OPLCandidate.hpp  OPLElectionData.hpp  OPLParty.hpp  Party.hpp
Project1/testing/: AuditLogUnitTest.cpp  CPLElectionDataUnitTest.cpp  CandidateUnitTest.cpp  (+4 more)
Project2/: CMakeLists.txt  Makefile  README.md
Project2/src/: AuditLog.cpp  CMakeLists.txt  CPLCandidate.cpp  CPLElectionData.cpp  CPLParsingStrategy.cpp  CPLParty.cpp  Candidate.cpp  ElectionData.cpp  ElectionDataParser.cpp  ElectionParsingStrategy.cpp  MPOCandidate.cpp  MPOElectionData.cpp  MPOParsingStrategy.cpp  MPOParty.cpp  MVCandidate.cpp  MVElectionData.cpp  MVParsingStrategy.cpp  MVParty.cpp  OPLCandidate.cpp  OPLElectionData.cpp  OPLParsingStrategy.cpp  OPLParty.cpp  main.cpp
Project2/src/include/: AuditLog.hpp  CPLElectionData.hpp  CPLParsingStrategy.hpp  CPLParty.hpp  ElectionDataParser.hpp  ElectionParserStrategy.hpp  ElectionParsingStrategy.hpp  MPOCandidate.hpp  MPOElectionData.hpp  MPOParsingStrategy.hpp  MPOParty.hpp  MVCandidate.hpp  MVElectionData.hpp  MVParsingStrategy.hpp  MVParty.hpp  OPLParsingStrategy.hpp  OPLParty.hpp  Party.hpp
(+43 files in other folders)
